[fixed #9656529] z-index removed

--- a/web/assets/kebab/plugins/kebab-developer-tools/stylesheets/style-debug.css
+++ b/web/assets/kebab/plugins/kebab-developer-tools/stylesheets/style-debug.css
@@ -3,7 +3,6 @@
     position:fixed;
     margin:auto; padding: 0;
     width:100%;
-    z-index:99999;
     overflow: hidden;
 }
 div.kebab-developer-tools-top {
